SERVER-28271 Improve handling of invalid view pipeline defs

(cherry picked from commit b5e2615f9cf29942783ed554afeb364052dd83a4)